<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.demo_down_upload_image.pulkit.MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.demo_down_upload_image.pulkit.MainActivity">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="20dp"
            android:src="@drawable/bg_image" />

        <Button
            android:id="@+id/btn_upload_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_image"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:background="@color/green166"
            android:padding="10dp"
            android:text="@string/upload_images"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_download_single_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_upload_images"
            android:layout_centerInParent="true"
            android:background="@color/green166"
            android:padding="10dp"
            android:text="@string/download_single_image"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_download_multiple_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_download_single_image"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:background="@color/green166"
            android:padding="10dp"
            android:text="@string/download_multiple_images"
            android:textColor="@color/white" />

    </RelativeLayout>
</ScrollView>
