<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_camera_image_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.GalleryActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/green166"
        android:gravity="center"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/toolbar_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/images"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_fa_upload"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/fa_upload"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_fa_add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/fa_add"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/white" />

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_images"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
